--- a/JS/245_674d574b8d885/01. 기초문법/weight_step1_test.html
+++ b/JS/245_674d574b8d885/01. 기초문법/weight_step1_test.html
@@ -6,6 +6,10 @@
 <script>
 	var userHeight = 180; //신장
 	var userWeight = 74; //몸무게
+	var normal_w;
+	// var normal_w = ((userHeight - 100) * 0.9) < userWeight ? "과체중" : "평균체중";
+	var normal_w = (userWeight - 100) * 0.9;
+	document.write(nomarl_w, "<br>");
 
 </script>
 </head>
