--- a/JS/245_674d574b8d885/01. 기초문법/prior_test.html
+++ b/JS/245_674d574b8d885/01. 기초문법/prior_test.html
@@ -4,11 +4,37 @@
 	<meta charset="UTF-8">
 	<title> 논리연산자 </title>
 <script>
-	var a = 10, 
-					b= 20, 
-					c = 0, 
-					d = "hello";
+	var a = 10;
+	var	b = 20;
+	var	c = 0; 
+	var d = "hello";
+
+	var m = 30;
+	var n = 40;
 	var result;
+
+	result = a>b  || b>=m || m>n;
+	document.write(result, "<br>");
+
+	result = a>b  || b>=m || m<=n;
+	document.write(result, "<br>");
+
+	result = a<=b %% b>=m && m<=n;
+	document.write(result, "<br>");
+
+	result = a<=b && b>=m && m<=n;
+	document.write(result, "<br>");
+
+	result = !(a>b); // !(false) = true
+	document.write(result, "<br>");
+	
+	// 연산자 우선순위
+	// 1.()
+	// 2. 단항 연산자 (--, ++, !)
+	// 3. 산술 연산자 (*, /, %, +, -)
+	// 4. 비교 연산자 (>, >=, <, <=, ==, ===, !==, !=)
+	// 5. 논리 연산자 (=, +=, -=, *=, %=)
+	
 
 </script>
 </head>
