--- a/JS/245_674d574b8d885/02. 제어문/else_2_test.html
+++ b/JS/245_674d574b8d885/02. 제어문/else_2_test.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <title> else문 </title>
 <script>
+    // confirm
+    var result = confirm("정말 삭제하시겠습니까?");
+
+    if (result){
+        document.wirte("탈퇴 처리 되었습니다.");
+    } else {
+        document.write("탈퇴 취소 되었습니다.");
+    }
 
 </script>
 </head>
