--- a/JS/245_674d574b8d885/02. 제어문/do_while_1_test.html
+++ b/JS/245_674d574b8d885/02. 제어문/do_while_1_test.html
@@ -5,6 +5,10 @@
 <title> do while문 </title>
 <script>
 	var i = 10;
+	do {
+		document.write("hello" + i + "<br>");
+		i++;
+	} while (i < 15)
 	
 </script>
 </head>
