--- a/JS/245_674d574b8d885/02. 제어문/while_3_test.html
+++ b/JS/245_674d574b8d885/02. 제어문/while_3_test.html
@@ -10,6 +10,25 @@
 </style>
 <script>
 	var i = 20;
+	// while문을 사용하여 20부터 10까지의 숫자 중 짝수일 경우에는 파란색으로 출력되고
+	// 홀수일 경우에는 빨간색으로 출력되도록 하시오
+	// document.write("<p class='~~~'>");
+
+		while(i >= 10){
+			if(i % 2 == 0){
+				document.write("<p class='blue'>"+ i+ "</p>");
+			}else{
+				document.write
+				
+
+
+
+
+
+
+			}
+			i--;
+		};
 
 </script>
 </head>
