--- a/JS/245_674d574b8d885/02. 제어문/미션/double_for_test_2.html
+++ b/JS/245_674d574b8d885/02. 제어문/미션/double_for_test_2.html
@@ -4,19 +4,20 @@
 <meta charset="UTF-8">
 <title> 제어문 종합문제 </title>
 <script>
-	var num = 1;
-	var t = "<table border='1'>";
-	for(var i = 1; i <= ; i++) {
-		t += "<tr>";
-		for(var k = 1; k <= ; k++) {
-			t += 
-			num++;
-		}
-		t += "</tr>";
-	}
-	t += "</table>";
+    var num = 1; // 숫자를 1로 초기화
+    var t = "<table border='1'>"; // 테이블 시작 태그
 
-	document.write(t);
+    for (var i = 1; i <= 5; i++) { // 5개의 행
+        t += "<tr>"; // 행 시작
+        for (var k = 1; k <= 5; k++) { // 각 행에 5개의 열
+            t += "<td>" + num + "</td>"; // 셀에 숫자 삽입
+            num++; // 숫자 증가
+        }
+        t += "</tr>"; // 행 끝
+    }
+    t += "</table>"; // 테이블 끝
+
+    document.write(t); // 완성된 테이블 출력
 </script>
 </head>
 <body>
