--- a/JS/245_674d574b8d885/02. 제어문/미션/test1.html
+++ b/JS/245_674d574b8d885/02. 제어문/미션/test1.html
@@ -12,7 +12,13 @@
             let b = 20;
             console.log(b); 
             alert(b);
-
+        
+            const pi = 3.14159;
+            console.log(pi);
+            
+            const person = { name:"john", age: 30};
+            person.age = 31;
+            console.log(person);
 
 
 
