--- a/JS/245_674d574b8d885/03. 객체/math_ob1.html
+++ b/JS/245_674d574b8d885/03. 객체/math_ob1.html
@@ -8,11 +8,15 @@
 
 	var maxNum = Math.max(10, 5, 8, 30),
 		minNum = Math.min(10, 5, 8, 30),
-		roundNum = Math.round(num),
-		floorNum = Math.floor(num),
-		ceilNum = Math.ceil(num),
-		rndNum = Math.random( ),
-		piNum = Math.PI;
+		roundNum = Math.round(num), //반올림
+		floorNum = Math.floor(num),// 내림
+		ceilNum = Math.ceil(num), // 올림
+		rndNum = Math.random( ),// 0 ~ 1 사이 난수반환
+		piNum = Math.PI;	// 원주율(상수)을 반환
+		// Math.abs(숫자) 절대값
+		// Math.pow(숫자, 제곱값) 거듭제곱
+		// Math.sqrt(숫자) 제곱근
+
 
 	document.write(maxNum, "<br>");
 	document.write(minNum, "<br>");
