--- a/JS/245_674d574b8d885/04. 함수/function_1_test.html
+++ b/JS/245_674d574b8d885/04. 함수/function_1_test.html
@@ -6,6 +6,20 @@
 <script>
 	var count = 0;
 
+	function myFnc(){
+		count++;
+		document.write("hello"+ count, "<br>");
+	}
+
+	var theFnc = function(){
+		count++;
+		document.write("bye" + count, "<br>");
+	}
+
+	myFnc();
+	theFnc();
+	
+
 </script>
 </head>
 <body>
