--- a/JS/245_674d574b8d885/03. 객체/string_ob1.html
+++ b/JS/245_674d574b8d885/03. 객체/string_ob1.html
@@ -1,34 +1,86 @@
 <!DOCTYPE html>
+
 <html lang="ko">
+
 <head>
+
 <meta charset = "UTF-8">
+
 <title> 문자 객체 </title>
+
 <script>
-	var t = "Hello Thank you good luck to you";
-	document.write(t.charAt(16), "<br>");
-	document.write(t.indexOf("you"), "<br>");
-	document.write(t.indexOf("you", 16), "<br>");
-	document.write(t.lastIndexOf("you"), "<br>");
-	document.write(t.lastIndexOf("you", 25), "<br>");
-	document.write(t.match("luck"), "<br>");
-	document.write(t.search("you"), "<br>");
-	document.write(t.substr(21, 4), "<br>");
-	document.write(t.substring(6, 12), "<br>");
-	document.write(t.replace("you","me"), "<br>");
-	document.write(t.toLowerCase(), "<br>");
-	document.write(t.toUpperCase(), "<br>");
-	document.write(t.length, "<br>");
 
-	var s = t.split(" ");
-	document.write(s[0], "<br>");
-	document.write(s[4], "<br>");
+    var t = "Hello Thank you good luck to you";
 
-	var str = "A";
-	var t = str.charCodeAt(0);
-	document.write(t, "<br>");
-	document.write(String.fromCharCode(65), "<br>");
+    document.write(t.charAt(16), "<br>"); // 인덱스 16에 저장된 문자를 불러온다.
+
+    document.write(t.indexOf("you"), "<br>"); // you 가 발견된 시점의 인덱스 반환.
+
+
+ 
+
+    // 16 인덱스 부터 you 가 발견된 시점의 인덱스 반환.
+
+    document.write(t.indexOf("you", 16), "<br>");
+
+    // 문자열 오른쪽에서 부터 왼쪽 방향으로  제일 먼저 발견된 you 의 인덱스 값 반환.
+
+    document.write(t.lastIndexOf("you"), "<br>");  
+
+    document.write(t.lastIndexOf("you", 25), "<br>"); // 25부터 왼쪽 방향으로
+
+    // 문자열 왼쪽부터 제일 먼저 발견된 luck 과 일치되는 문자를 찾아 반환.
+
+    document.write(t.match("luck"), "<br>");
+
+    // 문자열 왼쪽에서부터 제일 먼저 발견된 you 의 인덱스 값을 반환
+
+    document.write(t.search("you"), "<br>");
+
+    // 문자열 인덱스 21부터 4글자를 가져온다.
+
+    document.write(t.substr(21, 4), "<br>");
+
+    // 문자열 인덱스 6부터 12 이전까지의 문자열을 가져온다.
+
+    document.write(t.substring(6, 12), "<br>");
+
+    // 문자열 왼쪽에서 부터 제일 먼저 발견된 you를 me로 치환.
+
+    document.write(t.replace("you","me"), "<br>");
+
+    document.write(t.toLowerCase(), "<br>"); // 소문자로 변환
+
+    document.write(t.toUpperCase(), "<br>"); // 대문자로 변환
+
+    document.write(t.length, "<br>"); // 개수 반환
+
+
+ 
+
+    var s = t.split(" "); // 공백을 기준으로 문자를 분리하여 배열로 만듦
+
+    document.write(s[0], "<br>");
+
+    document.write(s[4], "<br>");
+
+
+ 
+
+    var str = "A";
+
+    var t = str.charCodeAt(0); // 변수에 저장된 문자열 중 0번 인덱스의 문자 A의 아스키 코드값을 반환.
+
+    document.write(t, "<br>");
+
+    document.write(String.fromCharCode(65), "<br>"); // 코드값 65에 해당하는 문자를 반환.
+
 </script>
+
 </head>
+
 <body>
+
 </body>
+
 </html>
