--- a/JS/245_674d574b8d885/04. 함수/function_10_test.html
+++ b/JS/245_674d574b8d885/04. 함수/function_10_test.html
@@ -2,8 +2,22 @@
 <html lang="ko">
 <head>
 <meta charset = "UTF-8">
-<title> 함수 </title>
+<title> 객체 생성자 함수 </title>
 <script>
+    function CheckWeight(name, height, weight){
+        this.userName = name;
+        this.userHeight = height;
+        this.userWeight = weight;
+        this.minWeight;
+        this.maxWeight;
+
+        this.getInfo = function(){
+            var str = "";
+            str += "이름: " + this.userName + ", ";
+            str += "키: " + this.userHeight + ", ";
+            str += "몸무게: " + this.userWeight + ", ";
+        }
+    }
 
 </script>
 </head>
