--- a/JS/245_674d574b8d885/04. 함수/function_2_test.html
+++ b/JS/245_674d574b8d885/04. 함수/function_2_test.html
@@ -7,6 +7,14 @@
 	var color=["white", "yellow", "aqua", "purple"];
 			
 	var i=0;
+	console.log(color.length);
+	function changeColor(){
+		i++;
+		if(i >= color.length) i = 0;
+
+		var bodyTag = document.getElementById("theBody");
+		bodyTag.style.backgroundColor = color[i];
+	}
 
 </script>
 </head>
