--- a/JS/245_674d574b8d885/04. 함수/function_3_test.html
+++ b/JS/245_674d574b8d885/04. 함수/function_3_test.html
@@ -4,8 +4,15 @@
 	<meta charset = "UTF-8">
 	<title> 함수 </title>
 	<script>
+		funtion myFnc(name, area){
+			document.write("안녕하세요. " + name + " 입니다.", "<br>");
+			document.write("사는 곳은 " + area + " 입니다.", "<br><br>");
+		}
 
-	</script>
+		myFnc("홍당무", "서울");
+		myFnc("깍두기", "부산");
+
+	</script>ㄴ
 </head>
 <body>
 </body>
