--- a/JS/245_674d574b8d885/03. 객체/string_ob3_test.html
+++ b/JS/245_674d574b8d885/03. 객체/string_ob3_test.html
@@ -9,6 +9,22 @@
 
 	var check1 = false;
 	var check2 = false;
+
+	//이메일 유효성을 검사하여 "@"를 정상적으로 작성했으면 check1에 true를 저장합니다.
+	if(userEmail.indexOf("@") > 0) check1 = true;
+
+	//입력한 이메일과 arrUrl의 단어를 하나씩 비교하여 1개의 단어라도 일치하면
+	//check2에 true를 저장한다.
+
+	for(var i = 0; i<arrUrl.length; i++){
+		if(userEmail.indexOf(arrUrl[i]) > 0) check2 = true;
+	}
+
+	if(check1 && check2){
+		document.write(userEmail);
+	}else{
+		alert("이메일 형식이 잘못되었습니다.")
+	}
 </script>
 </head>
 <body>
