--- a/JS/245_674d574b8d885/03. 객체/win_ob3_test.html
+++ b/JS/245_674d574b8d885/03. 객체/win_ob3_test.html
@@ -5,7 +5,12 @@
 <title> window 객체 </title>
 <script>
 	var addNum = 0;
-	var auto=
+	
+    var auto= setTimeout(function(){
+        addNum++;
+        document.write(addNum, "<br>");
+        console.log(addNum);
+    }, 5000);
 </script>
 </head>
 <body>
