--- a/JS/245_674d574b8d885/04. 함수/function_10_test.html
+++ b/JS/245_674d574b8d885/04. 함수/function_10_test.html
@@ -14,11 +14,34 @@
         this.getInfo = function(){
             var str = "";
             str += "이름: " + this.userName + ", ";
-            str += "키: " + this.userHeight + ", ";
-            str += "몸무게: " + this.userWeight + ", ";
+            str += "키: " + this.userHeight + "cm, ";
+            str += "몸무게: " + this.userWeight + "kg";
+            return str;
+        }
+        this.getResult = function(){
+            this.minWeight = (this.userHeight - 100) * 0.9 - 5;
+            this.maxWeight = (this.userHeight - 100) * 0.9 + 5;
+
+            if(this.userWeight >= this.minWeight &&
+                this.userWeight <= this.maxWeight) {
+                    return "정상 몸무게입니다.";
+                } else if(this.userWeight < this.minWeight){
+                    return "정상 몸무게보다 미달입니다.";
+                } else {
+                    return "정상 몸무게보다 초과입니다.";
+                }
         }
     }
 
+    // 객체 생성
+    var jang = new CheckWeight("장보리", 168, 62);
+    var park = new CheckWeight("박달재", 180, 88);
+
+    // 객체 정보 출력
+    document.write("<h2>" + jang.getInfo() + "</h2>");
+    document.write("<p>" + jang.getResult() + "</p>");
+    document.write("<h2>" + park.getInfo() + "</h2>");
+    document.write("<p>" + park.getResult() + "</p>");
 </script>
 </head>
 <body>
